Project/objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <description>Quote/Proposal object which holds dates and line items, many quotes/proposals may be related to a single opportunity, a quote/proposal may have many detail lines</description>
    <fields>
        <fullName>APTS_Migration_Status__c</fullName>
        <label>Migration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Apttus Objects Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Parent CLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Child Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Parent Cart Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Generate_Quotation_Legacy__c</fullName>
        <description>This field is used to generate legacy quotes</description>
        <formula>HYPERLINK(&quot;/apex/APTS_CCPDMQuoteGenerationPage?id=&quot; &amp;Id,IMAGE(&quot;/resource/APTS_Generate_Quotation_Button&quot;, &quot;Generate Quotation&quot;),&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used to generate legacy quotes</inlineHelpText>
        <label>Generate Quotation (Legacy)</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>APTS_Has_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>APTS_Quotation_Closed_Status__c</fullName>
        <inlineHelpText>If the Quotation status is Closed, depicts why it is closed</inlineHelpText>
        <label>Quotation Closed Status</label>
        <picklist>
            <controllingField>APTS_Quotation_Category__c</controllingField>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by ABB</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Neglected</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Another ABB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
     <fields>
        <fullName>APTS_Sales_Region__c</fullName>
        <description>Sales Region is dependent on the Account Customer Country. For some countries Sales Region is not available.</description>
        <inlineHelpText>Sales Region is dependent on the Account Customer Country. For some countries Sales Region is not available.</inlineHelpText>
        <label>Sales Region</label>
        <picklist>
            <controllingField>APTS_Account_Customer_Country__c</controllingField>
            <picklistValues>
                <fullName>Baijo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Sales_PGHV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Sales_PGTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Re-Export Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS-East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSO Gdansk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSO Katowice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSO Lodz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSO Lublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSO Poznan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSO Warszawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSO Wroclaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS-South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS-West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Category__c</fullName>
        <inlineHelpText>Quotation Status can be Open/Closed. If Quotation status is Open, then the Open status fields come into play. If Quotation status is closed, then the closed status fields come into play.</inlineHelpText>
        <label>Quotation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted (Presented)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_T_C_Language_Translation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T&amp;C Language Translation</label>
        <referenceTo>APTS_T_C_Language_Translation__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Main_Reason_For_Close__c</fullName>
        <inlineHelpText>Please pick the main reason why this Quotation was closed</inlineHelpText>
        <label>Main Reason For Close</label>
        <picklist>
            <controllingField>Apttus_Proposal__Approval_Stage__c</controllingField>
            <picklistValues>
                <fullName>ABB only bidder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence to Customer&apos;s time schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence to Customer&apos;s time schedule/ Delivery Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer after bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercially unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Frame Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost for missed order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No financing in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No or bad track record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No permit in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, please comment.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other preferred suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part of winning ABB package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred supplier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Approval_Stage__c</fullName>
        <description>The proposal approval stage</description>
        <label>Approval Stage</label>
        <picklist>
            <controllingField>APTS_Quotation_Category__c</controllingField>
        <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generated</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Saturated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturated Expired</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Approved but failed to load on SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved but Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Without ABB Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Pending</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Neglected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Ordered</fullName>
            </picklistValues>
        <picklistValues>
                <fullName>Another ABB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Lost_Value__c</fullName>
        <description>Reporting field to calculate the Hit Rate%</description>
        <formula>IF
(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Lost&apos;),APTS_Quotation_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Lost Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Won_Value__c</fullName>
        <description>Reporting field to calculate the Hit Rate%</description>
        <formula>IF(OR
(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Order Pending&apos;),
 ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Ordered&apos;),
 ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Won&apos;),
 ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Partially Ordered&apos;)), 
APTS_Quotation_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Won Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_3rd_Party_Account_Number__c</fullName>
        <description>Customer Logistics Account</description>
        <inlineHelpText>Forwarder account number in the customer master data.</inlineHelpText>
        <label>Forwarder Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Application__c</fullName>
        <inlineHelpText>ABB classification of application based on the main process activity of the delivered product, service, solution. The selectable options are product group specific</inlineHelpText>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AP.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Location_Bidding_Unit_Country__c</fullName>
        <formula>TEXT(APTS_ABB_Location_Bidding_unit__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Location – Bidding Unit Country</label>
        <type>Text</type>
    </fields>
    <fields>
         <fullName>APTS_ABB_Location_Bidding_unit__c</fullName>
         <deleteConstraint>SetNull</deleteConstraint>
         <label>ABB Location – Bidding unit</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
            <filterItems>
                <field>ABB_Location__c.Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Data_Load_Year__c</field>
                <operation>notEqual</operation>
                <value>2015</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notContain</operation>
                <value>ZCCO, ZCRE, ZCVA</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value>ZC-Corporate &amp; Other</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value>Admin/Corporate, Other, R&amp;D, Warehouse or Logistics, Training</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
   <fields>
        <fullName>APTS_Accept__c</fullName>
        <formula>IF ( OR(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Presented&quot;),ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Submitted to Customer&quot;)) , 

HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalAccept?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;), 

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Customer_Address__c</fullName>
        <formula>APTS_LP_AccountCustomer__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Customer_City__c</fullName>
        <formula>APTS_LP_AccountCustomer__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer City</label>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>APTS_Account_Customer_Country__c</fullName>
        <label>Account Customer Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Customer_GUID__c</fullName>
        <formula>APTS_LP_AccountCustomer__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer GUID</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>APTS_Special_Warranty_Terms__c</fullName>
        <inlineHelpText>The user can enter a free text for Special Warranty terms.</inlineHelpText>
        <label>Special Warranty Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Submit_for_Approval__c</fullName>
        <formula>IF( APTS_Record_Type_Name__c ==&apos;LP&apos;, 
IF(NOT(ISNULL(Apttus_QPConfig__ConfigurationFinalizedDate__c)),IF( 
APTS_LP_No_Approval_Rule_Matched__c, &apos;NO APPROVAL RULE MATCHED&apos;, 
IF(AND(OR(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Recalled&apos;), AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Draft&apos;), APTS_Approval_Required__c)), NOT(APTS_Is_Placeholder_Quote__c),ISPICKVAL(APTS_Quotation_Category__c,&quot;Open&quot;)) 
, HYPERLINK(&quot;/apex/APTS_SubmitProposalAprroval?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_SubmitForApproval&quot;, &quot;Submit for Approval&quot;),&quot;_self&quot;), NULL)),$Label.APTS_Quote_Finalization_Required),
IF(
$User.Id == OwnerId, 
IF(NOT(ISNULL(Apttus_QPConfig__ConfigurationFinalizedDate__c)),

IF( 
APTS_LP_No_Approval_Rule_Matched__c, &apos;ERROR ON CART, REFER ACTIVITY LIST&apos;, 


IF(AND(
OR(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Recalled&apos;), 
AND(ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &apos;Draft&apos;), 
APTS_Approval_Required__c)), NOT(APTS_Is_Placeholder_Quote__c),
ISPICKVAL(APTS_Quotation_Category__c,&quot;Open&quot;)

) 
, 

HYPERLINK(&quot;/apex/APTS_SubmitProposalAprroval?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_SubmitForApproval&quot;, &quot;Submit for Approval&quot;),&quot;_self&quot;), NULL)),$Label.APTS_Quote_Finalization_Required) ,

NULL))</formula>
        <label>Submit for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Customer_Postal_Code__c</fullName>
        <formula>APTS_LP_AccountCustomer__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Customer_Type__c</fullName>
        <label>Account Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABB ICV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Non-Buying Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIS Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To populate Account End User</description>
        <inlineHelpText>Account End user associated with the Quotation.</inlineHelpText>
        <label>Account End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotations (Account End User)</relationshipLabel>
        <relationshipName>AccountEndUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Type__c</fullName>
        <inlineHelpText>To identify that Quotation has been created for which type of account - Account Customer, Account End user or Primary Partner</inlineHelpText>
        <label>Quotation For (picklist - do not use)</label>
        <picklist>
            <picklistValues>
                <fullName>Account End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Customer</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Activate_Revision__c</fullName>
        <formula>IF( 

AND(
 APTS_Active_Version__c &lt;&gt; true,
APTS_Template__c= false,
 Apttus_Proposal__Opportunity__r.APTS_Has_Ordered_Quotation__c &lt;&gt; true

,
OR( 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;RFQ Received&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;RFQ Assigned&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Draft&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Under Support&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Pending Approval&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approval Required&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approved&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Rejected&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Generated&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Partially Ordered&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Order Pending&quot;), 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Validity Expired&quot;) ,
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Superseded&quot;) 


)

)
, 


HYPERLINK(&quot;/apex/APTS_Quoterevision?id=&quot;&amp;Id &amp; &quot;&amp;action=Activate&quot; , IMAGE(&quot;/resource/APTS_Activate_Revision&quot;, &quot;Activate Revision&quot;),&quot;_self&quot;) 
,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Revision</label>
        <type>Text</type>
    </fields>
</CustomObject>